src/test/deca/context/valid/personalTests/testOverride.deca
// Test Override

class A {
    protected int a = 3;

    void m1() {
        println(a);
    }
}

class B extends A {
    void m1() {
        println(a + 1);
    }
}

{
    A a = new A();
    B b = new B();
    a.m1();
    b.m1();
}